--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,13 +47,13 @@
 
                     <a class="navbar-brand" href="#">Alex Buaiscia</a>
 
-                    <ul class="nav navbar-nav navbar-left">
+                    <ul style="margin: auto;" class="nav navbar-nav navbar-left">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Scrittura
                                   </a>
-                            <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Pubblicazioni</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Blog di scrittura</a>
@@ -64,24 +64,23 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle disabled" href="/devlife" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Dev life
                                   </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Projects</a>
+                            <div style="z-index: 90;" class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/devlife">Dev Home</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Skills</a>
+                                <a class="dropdown-item" href="/devblog">Dev Blog</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Curriculum</a>
+                                <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
                         </li>
                     </ul>
 
 
                 </div>
-                <!-- <div id="signButtons" class="row"> -->
 
-                <div id="signButtons" class="collapse navbar-collapse">
+                <div id="navbarSupportedContent" class="signButtons collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <% if(!currentUser){ %>
                             <li><a class="btn btn-outline-info" href="/login">Login  &nbsp; </a></li>
@@ -121,4 +120,4 @@
         </div>
     </header>
     <main>
-        <div id="containerNav" class="container-fluid">
+        <div class="container-fluid containerNav">
