--- a/views/space/edit.ejs
+++ b/views/space/edit.ejs
@@ -1,36 +1,38 @@
 <% include ../partials/header %>
 
-
-    <div class="row">
-        <h1 style="text-align: center; padding: 20px;"> Edit
-            <%= spacePost.name %>
-        </h1>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div style="width: 80%; margin: 25px auto;">
-                <form action="/spaceblog/<%= spacePost._id %>?_method=PUT" method="POST">
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="spacePost[name]" value="<%= spacePost.name %>">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="spacePost[image]" value="<%= spacePost.image %>">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="spacePost[text]" id="mytextarea"><%= spacePost.text %></textarea>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="spacePost[description]" value="<%= spacePost.description %>">
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-                    </div>
-                </form>
-                <a href="/spaceBlog">Go Back</a>
-            </div>
+    <div class="spaceSection">
+        <div class="row">
+            <h1 style="text-align: center; padding: 20px;"> Edit
+                <%= spacePost.name %>
+            </h1>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div style="width: 80%; margin: 25px auto;">
+                    <form action="/spaceblog/<%= spacePost._id %>?_method=PUT" method="POST">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="spacePost[name]" value="<%= spacePost.name %>">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="spacePost[image]" value="<%= spacePost.image %>">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="spacePost[text]" id="mytextarea"><%= spacePost.text %></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="spacePost[description]" value="<%= spacePost.description %>">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                        </div>
+                    </form>
+                    <a href="/spaceBlog">Go Back</a>
+                </div>
+            </div>
 
+        </div>
     </div>
+
 
 
     <% include ../partials/footer %>
