--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,8 +1,89 @@
-<% include ./partials/header %>
+<!DOCTYPE html>
+<html>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="writing space and developer life">
+    <meta name="author" content="Alex Buaiscia">
 
 
-<h1>Alex Buaiscia</h1>
+    <title>Alex Buaiscia</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Tangerine|Libre+Baskerville|Old+Standard+TT|Monoton|Dancing+Script');
+    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/stylesheets/main.css">
 
-<a href="/spaceblog"> Go to the space section </a>
 
-<% include ./partials/footer %>
+
+</head>
+
+<body>
+    <main>
+        <div class="container-fluid containerNav">
+
+            <header>
+                <h1 id="landingtitle">Alex Buaiscia</h1>
+            </header>
+            <section style="padding: 7% 5%;">
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="/">
+                            <div class="card mb-3 entry">
+                                <img class="card-img-top" src="https://www.quotidianosociale.it/wp-content/uploads/2018/02/corso-di-scrittura-creativa_53514_display.jpg" alt="Penna su foglio">
+                                <h2 class="card-info">
+                                    Scrittura
+                                </h2>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/spaceblog">
+                            <div class="card mb-3 entry">
+                                <img class="card-img-top" src="https://img.purch.com/h/1000/aHR0cDovL3d3dy5zcGFjZS5jb20vaW1hZ2VzL2kvMDAwLzA4MC8xMjcvb3JpZ2luYWwvaHlwZXJpb24tcHJvdG9jbHVzdGVyLmpwZw==" alt="Hiperion supercluster">
+                                <div class="card-info">
+                                    <h2>Space blog</h2>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/devlife">
+                            <div class="card mb-3 entry">
+                                <img class="card-img-top" src="https://steemitimages.com/DQmNW1WwVdQtYZzdndvrgRiYgiNLJmh2RU2wBshmHbiPvJj/photo5012998412878063555.jpg" alt="JS screenshot">
+                                <div class="card-info">
+                                    <h2>Dev life</h2>
+                                </div>
+                            </div>
+                        </a>
+
+                    </div>
+
+                </div>
+
+            </section>
+
+
+        </div>
+        <!-- /.container -->
+    </main>
+    <footer style="position: fixed" class="footer py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright Alex Buaiscia &copy; - 2018</p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+</body>
+
+</html>
