--- a/views/space/spaceblog.ejs
+++ b/views/space/spaceblog.ejs
@@ -3,6 +3,8 @@
         <div class="row">
             <h1 id="titleSpace" class="my-4">Space blog
             </h1>
+            <div class="moon">
+            </div>
             <div class="col-md-10 col-sm-10 col-lg-10">
 
                 <% if(currentUser && currentUser.username === "alex"){ %>
