--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,9 +10,9 @@ html {
 body {
     background: #ADA996;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+    background: -webkit-linear-gradient(to right, rgb(173, 172, 172), rgb(241, 241, 241), #F2F2F2, rgb(173, 172, 172));
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+    background: linear-gradient(to right, rgb(173, 172, 172), rgb(241, 241, 241), #F2F2F2, rgb(173, 172, 172));
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     margin: 0;
@@ -30,6 +30,10 @@ footer {
     width: 100%;
     /* height: 100px; */
     overflow: hidden;
+}
+
+h2 {
+    text-align: center;
 }
 
 #navStyle {
@@ -63,9 +67,9 @@ footer {
     font-size: 1.2em;
     background: #ADA996;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+    background: -webkit-linear-gradient(to right, rgb(173, 172, 172), rgb(241, 241, 241), #F2F2F2, rgb(173, 172, 172));
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+    background: linear-gradient(to right, rgb(173, 172, 172), rgb(241, 241, 241), #F2F2F2, rgb(173, 172, 172));
 }
 
 .container-fluid {
@@ -138,6 +142,19 @@ img {
     width: auto;
     min-width: 100px;
     /* margin-bottom: 20%; */
+}
+
+.btnSlide:hover {
+    animation-name: scaling;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    /* transform: scale(1.1); */
+}
+
+@keyframes scaling {
+    60% {
+        transform: scale(1.3);
+    }
 }
 
 .carousel-caption {
@@ -252,4 +269,66 @@ a:active {
 .spaceSection {
     padding-left: 10%;
     padding-right: 10%;
+}
+
+.moon {
+    position: relative;
+    margin: 4%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 70px;
+    height: 70px;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: 15px 10px 0 0 rgb(173, 172, 172);
+}
+
+.entry {
+    border-radius: 5%;
+    -webkit-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+    box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
+    transition: .2s linear;
+    z-index: 10;
+}
+
+.entry img {
+    border-radius: 5%;
+    max-height: 308.75px;
+}
+
+.card-info {
+    position: absolute;
+    top: 80%;
+    /* bottom: 50%; */
+    left: 0;
+    right: 0;
+    /* background: rgba(11, 26, 36, 0.72);
+    color: rgb(189, 172, 172); */
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: 5;
+}
+
+.entry:hover .card-info {
+    visibility: visible;
+    opacity: 1;
+}
+
+.entry:hover {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 0 0 100px 0;
+}
+
+#landingtitle {
+    padding-top: 5%;
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    /* font-weight: 600; */
+    font-size: 6rem;
 }
