--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -56,16 +56,33 @@
                 <p class="sectionTitle">
                     About me
                 </p>
+                <p style="text-align: center; font-size: 24px;">
+                    I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications.
+                    I really, really love to learn and to build new projects. </p>
             </div>
         </div>
         <div id="skills" class="row">
             <div class="col-md-12">
                 <p class="sectionTitle">Skills</p>
+                <section class="d-flex flex-row justify-content-around"  style="margin: 2% 5%; font-size: 6em;">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-js"></i>
+                    <i class="fab fa-node"></i>
+                    <i class="fab fa-npm"></i>
+                    <i class="fas fa-database"></i>
+                    <i class="fab fa-linux"></i>
+                    <i class="fab fa-php"></i>
+                </section>
+                
             </div>
         </div>
         <div id="projects" class="row">
             <div class="col-md-12">
                 <p class="sectionTitle">Portfolio</p>
+                <section class="d-flex flex-row justify-content-around">
+                    <img src="./img/alexbuaiscia.png" alt="main website of mine">
+                </section>
             </div>
         </div>
         <div id="contact" class="row">
