--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -35,9 +35,9 @@
                     <div class="col-md-4">
                         <a href="/">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="https://www.quotidianosociale.it/wp-content/uploads/2018/02/corso-di-scrittura-creativa_53514_display.jpg" alt="Penna su foglio">
-                                <h2 class="card-info">
-                                    Scrittura
+                                <img class="card-img-top" style="opacity: 0.2;" src="https://www.quotidianosociale.it/wp-content/uploads/2018/02/corso-di-scrittura-creativa_53514_display.jpg" alt="Penna su foglio">
+                                <h2 class="card-info" style="opacity: 0.2;">
+                                    Scrittura (not available)
                                 </h2>
                             </div>
                         </a>
