--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,12 @@
 <footer class="footer py-5 bg-dark">
     <div class="container">
         <p class="m-0 text-center text-white">Copyright Alex Buaiscia &copy; - 2018</p>
+        <p class="text-center">
+            <a href="https://www.linkedin.com/in/alex-buaiscia/" target="_blank"><i class="fab fa-linkedin-in"></i></a> 
+            <a href="https://github.com/buaiscia" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/AlexBuaiscia" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/alex.buaiscia.r" target="_blank"><i class="fab fa-facebook"></i> 
+        </p>
     </div>
 </footer>
 
