--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/stylesheets/main.css">
 
 
@@ -72,11 +74,17 @@
         </div>
         <!-- /.container -->
     </main>
-    <footer style="position: fixed" class="footer py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright Alex Buaiscia &copy; - 2018</p>
-        </div>
-    </footer>
+    <footer class="footer py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright Alex Buaiscia &copy; - 2018</p>
+        <p class="text-center">
+            <a href="https://www.linkedin.com/in/alex-buaiscia/" target="_blank"><i class="fab fa-linkedin-in"></i></a> 
+            <a href="https://github.com/buaiscia" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/AlexBuaiscia" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/alex.buaiscia.r" target="_blank"><i class="fab fa-facebook"></i> 
+        </p>
+    </div>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
