--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -22,13 +22,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="http://wowslider.com/sliders/demo-77/data1/images/road220058.jpg" alt="First slide">
+                                <img class="d-block w-100" src="./img/road.jpg" alt="First slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <a href="#skills"><button type="button" class="btn btn-default btnSlide">Are those the skills you need?</button></a>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="http://cssslider.com/sliders/demo-17/data1/images/picjumbo.com_hanv9909.jpg" alt="Second slide">
+                                <img style="max-height: 714px" class="d-block w-100" src="./img/desk.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block btnSlide">
                                     <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge</button></a>
                                 </div>
