--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -247,9 +247,17 @@ hr {
 }
 
 .devMenu {
-    padding: 5% 15px 0 0;
+    padding: 50px 15px 0 0;
     text-align: right;
     font-size: 36px;
+}
+
+.devMenu a {
+    color: black;
+}
+
+.devMenu a:hover {
+    color: blue;
 }
 
 ul li {
