--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -6,9 +6,9 @@
             <div class="col-md-12">
                 <ul class="devMenu">
                     <li><a href="#about"> About me</a></li>
-                    <li><a href="#about"> Skills</a></li>
-                    <li><a href="#about"> Projects</a></li>
-                    <li><a href="#about"> Contacts</a></li>
+                    <li><a href="#skills"> Skills</a></li>
+                    <li><a href="#projects"> Projects</a></li>
+                    <li><a href="#contact"> Contacts</a></li>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
                             <div class="carousel-item">
                                 <img style="max-height: 714px" class="d-block w-100" src="./img/desk.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block btnSlide">
-                                    <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge</button></a>
+                                    <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge <br> Under Construction</button></a>
                                 </div>
                             </div>
 
