--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,7 +71,7 @@
                             <div style="z-index: 90;" class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/devlife">Dev Home</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/devblog">Dev Blog</a>
+                                <a class="dropdown-item disabled" href="/devblog">Dev Blog</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
@@ -84,9 +84,9 @@
                 <div id="navbarSupportedContent" class="signButtons collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <% if(!currentUser){ %>
-                            <li><a class="btn btn-outline-info" href="/login">Login  &nbsp; </a></li>
+                            <li><a class="btn btn-outline-info" href="/login">LOGIN  &nbsp; </a></li>
                             <div class="divider"></div>
-                            <li><a class="btn btn-outline-info" href="/register">Sign Up  &nbsp; </a></li>
+                            <li><a class="btn btn-outline-info" href="/register">SIGN UP  &nbsp; </a></li>
                             <% } else { %>
                                 <li style="padding-top: 7px;"><a href="#">Signed In as <%= currentUser.username %>  &nbsp; </a></li>
                                 <div class="divider"></div>
