--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -1,5 +1,13 @@
 <% include ../partials/header %>
 
+    <script src='https://cloud.tinymce.com/stable/tinymce.min.js'></script> 
+    <script>
+        tinymce.init({
+            selector: '#mytextarea',
+            plugins: 'autoresize advlist autolink link image lists charmap print preview'
+        });
+    </script>
+
 
     <div>
         <div class="row">
