--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <% include ./partials/header %>
 
-    <div class="row">
+    <div style="margin-top: 80px">
         <h1 style="text-align:center">Login</h1>
-        <div style="width:30%; margin: 25px auto;">
+        <div style="width:30%; margin: 80px auto;">
             <form action="/login" method="POST">
                 <div class="form-group">
                     <input type="text" name="username" placeholder="username">
