--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <% include ./partials/header %>
 
-    <div class="row">
-        <h1 style="text-align:center">Login</h1>
-        <div style="width:30%; margin: 25px auto;">
+    <div style="margin-top: 80px;">
+        <h1 style="text-align:center">Sign Up</h1>
+        <div style="width:30%; margin: 80px auto;">
             <form action="/register" method="POST">
                 <div class="form-group">
                     <input type="text" name="username" placeholder="username">
