event-stream downgraded

--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -13,10 +13,10 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="devMenu">
-                    <li><a href="#about"> About me</a></li>
-                    <li><a href="#skills"> Skills</a></li>
-                    <li><a href="#projects"> Projects</a></li>
-                    <li><a href="#contact"> Contacts</a></li>
+                    <li><a class="anchor" href="#about"> About me</a></li>
+                    <li><a class="anchor" href="#skills"> Skills</a></li>
+                    <li><a class="anchor" href="#projects"> Projects</a></li>
+                    <li><a class="anchor" href="#contact"> Contacts</a></li>
                 </ul>
             </div>
         </div>
