--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,6 +76,13 @@ h2 {
     font-weight: 800;
 }
 
+.anchor {
+    /* display: block;
+    position: relative;
+    top: -25px;
+    visibility: hidden; */
+}
+
 .navbar-light {
     font-size: 1.2em;
     background: #ADA996;
