--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
 
-    
+
 
 </head>
 
@@ -65,7 +65,7 @@
                             <div style="z-index: 90;" class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/devlife">Dev Home</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item disabled" href="/devblog">Dev Blog</a>
+                                <a class="dropdown-item disabled" href="#">Dev Blog</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item disabled" href="#">Curriculum</a>
                             </div>
@@ -113,6 +113,9 @@
                         </div>
                         <% } %>
         </div>
+
+        
+
     </header>
     <main>
         <div class="container-fluid containerNav">
