--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -42,7 +42,7 @@
                             <div class="carousel-item">
                                 <img style="max-height: 714px" class="d-block w-100" src="./img/desk.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block btnSlide">
-                                    <a href="/devblog"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge <br> Under Construction</button></a>
+                                    <a href="#"><button type="button" class="btn btn-default btnSlide">Sharing some knowledge <br> Under Construction</button></a>
                                 </div>
                             </div>
 
