--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
                 </div>
             </form>
-            <a href="/spaceblog">Go Back</a>
+            <a href="javascript:history.back()">Go Back</a>
         </div>
     </div>
 
