--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -254,6 +254,7 @@ hr {
 
 .devMenu a {
     color: black;
+    border: 1px;
 }
 
 .devMenu a:hover {
@@ -373,4 +374,13 @@ a:active {
 
 .dropdown:hover>.dropdown-menu {
     display: block;
+}
+
+#caption {
+    margin: 15px 0;
+    text-align: center;
+}
+
+#projects img:hover {
+    -webkit-transform: scale(1.4, 1.4);
 }
